# neurogen

./: .gitignore  index.html  search-index.js
Assets/Extensions/NEATPack/NEAT/: Population.cs
Assets/Extensions/NEATPack/NEATProxy/: PopulationProxy.cs
Assets/Extensions/NEATPack/Simulation/NEAT/: GenomeCar.cs  PopulationCar.cs
Assets/FBX/: track.fbx  track2.fbx
Assets/Materials/: Road.mat
Assets/Prefabs/: Car.prefab  Track.prefab  TrackSystem1.prefab  TrackSystem2.prefab
Assets/Scenes/: MainScene.unity
Assets/Scenes/MainScene/: LightingData.asset  Lightmap-0_comp_light.exr  Lightmap-1_comp_light.exr  Lightmap-2_comp_light.exr  Lightmap-3_comp_light.exr
Assets/Scripts/: Car.cs  CarController.cs  Checkpoint.cs  Configuration.cs  Database.cs  GenomeColorCtrl.cs  HUD.cs  Main.cs  PopulationCar.cs  SmoothFollow.cs
Assets/UnityNEAT/Assets/Resources/: experiment.config.xml
Assets/UnityNEAT/Assets/SharpNEAT/: Optimizer.cs  UnitController.cs
Assets/UnityNEAT/Assets/SharpNEAT/Core/: UnityParallelListEvaluator.cs
Assets/UnityNEAT/Assets/SharpNEAT/EvolutionAlgorithms/: NeatEvolutionAlgorithm.cs
Database/: .gitignore  CMakeLists.txt  db.sqlite
Database/include/: main.h
Database/lib/sqlite3/: CMakeLists.txt
Database/src/: main.cpp
Database/test/: CMakeLists.txt  main.cpp
NeuroGen/0.1/: index.html
NeuroGen/0.1/core/: main.html
NeuroGen/0.1/extensions/: extension_creation.html  index.html  neat_pack.html  unity_neat.html
ProjectSettings/: ProjectSettings.asset
_/js/: site.js
docs/: package.json  playbook.yml
docs/src/docs/: antora.yml
(+12 files in other folders)
