cmake_minimum_required(VERSION 3.18)

set(CMAKE_CXX_STANDARD 11)
project(Database)
set(SOURCES src/main.cpp)
set(HEADERS include/main.h)
add_subdirectory(lib/sqlite3)

if(NOT DEFINED BUNDLE)
  set(BUNDLE ON)
endif()

if(APPLE)
  if(NOT BUNDLE)
    add_library(Database SHARED ${SOURCES} ${HEADERS})
  else()
    add_library(Database MODULE ${SOURCES} ${HEADERS})
    set_target_properties(Database PROPERTIES BUNDLE TRUE)
  endif()
else()
  add_library(Database SHARED ${SOURCES} ${HEADERS})
endif()

target_include_directories(Database PUBLIC include)
target_link_libraries(Database sqlite3)
